--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_1);
     var nb_total_points = 0 ;
     PS.forEach(function(element)
     {
-    nb_total_points += PS[indexOf(element)].length ;
+    nb_total_points += PS[PS.indexOf(element)].length ;
     }) ;
     console.log(nb_total_points) ;
     
