--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ layer_adresses_CS.eachLayer(function(layer) {
  
  
  var Test = LGeo.circle(layer.getLatLng(), radius, opts);
-console.log(Test) ;
+console.log(layer.getLayerId) ;
  var poly = turf.difference(turf.polygon(Test.toGeoJSON().geometry.coordinates),turf.polygon(ZI_20C.toGeoJSON().features[0].geometry.coordinates)) ;
 // on doit gérer le cas où la surface différence est un polygone à trou(s) !!
 var lng_lat_poly = [];
