--- a/index.html
+++ b/index.html
@@ -751,6 +751,10 @@ console.log(poly.geometry.type) ;
 // attention également au cas des multipolygones !!
 console.log(poly) ;
 var lng_lat_poly = [];
+// on teste le cas de multipolygones et on compte dans ce cas le nombre de polygones
+var nb_poly ;
+if (poly.geometry.type = 'Polygon')
+{ // cas d'un polygone unique, éventuellement à trous
 for (i=0 ; i < poly.geometry.coordinates.length ; i++)
 {var lng_lat_tmp = [];
  // on doit inverser les coordonnées de poly issue de turf
@@ -761,15 +765,26 @@ lng_lat_tmp.push(lng_lat);
 }
 lng_lat_poly[i] = lng_lat_tmp;
 }
- if (poly.geometry.type == 'Polygon')
+}
+else
+{ // cas d'un multipolygone : on doit aller opérer sur chacun des polygones, éventuellement à trous, chaque élément du tableau de coordonnées est un polygone
+for (k=0 ; k < poly.geometry.coordinates.length ; k++)
+{ // boucle sur chaque polygone
+for (i=0 ; i < poly.geometry.coordinates[k].length ; i++)
+{var lng_lat_tmp = [];
+ // on doit inverser les coordonnées de poly issue de turf
+ for (j=0 ; j < poly.geometry.coordinates[k][i].length ; j++)
  {
+var lng_lat = [poly.geometry.coordinates[k][i][j][1], poly.geometry.coordinates[k][i][j][0]];
+lng_lat_tmp.push(lng_lat);
+}
+lng_lat_poly[k][i] = lng_lat_tmp;
+}
+
+}
+}
  var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
- }
- else
- {
-console.log(lng_lat_poly) ;
-var cercle_mange = new L.multiPolygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
- 
+
  }
 cercle_mange.addTo(layer_cercles_CS) ;
 });
