--- a/index.html
+++ b/index.html
@@ -782,6 +782,7 @@ for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 
 	}
 }
+console.log(lng_lat_poly) ;
 
 var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
 // fin de la boucle sur chaque layer
