--- a/index.html
+++ b/index.html
@@ -767,8 +767,10 @@ for (i=0 ; i < poly.geometry.coordinates.length ; i++)
 }
 else
 { // cas d'un multipolygone : on doit aller opérer sur chacun des polygones, éventuellement à trous, chaque élément du tableau de coordonnées est un polygone
+console.log(poly.geometry.coordinates.length) ;
 for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 	{ // boucle sur chaque polygone
+	console.log(poly.geometry.coordinates[k].length) ;
 	for (i=0 ; i < poly.geometry.coordinates[k].length ; i++)
 		{var lng_lat_tmp = [];
  	// on doit inverser les coordonnées de poly issue de turf
