--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@ else
 console.log(poly.geometry.coordinates.length) ;
 for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 	{ // boucle sur chaque polygone
-	console.log(poly.geometry.coordinates[k]) ;
+	console.log(poly.geometry.coordinates[k].length) ;
 	for (i=0 ; i < poly.geometry.coordinates[k].length ; i++)
 		{var lng_lat_tmp = [];
  	// on doit inverser les coordonnées de poly issue de turf
