--- a/index.html
+++ b/index.html
@@ -769,13 +769,15 @@ else
 { // cas d'un multipolygone : on doit aller opérer sur chacun des polygones, éventuellement à trous, chaque élément du tableau de coordonnées est un polygone
 console.log(poly.geometry.coordinates.length) ;
 for (k=0 ; k < poly.geometry.coordinates.length ; k++)
-	{ // boucle sur chaque polygone
+	{ // boucle sur chaque polygone : ici, on a un array de dimension 1 si poly simple, de dimension >1 si poly à trous
 	console.log(poly.geometry.coordinates[k].length) ;
 	for (i=0 ; i < poly.geometry.coordinates[k].length ; i++)
+	// on boucle sur la dimension du poly simple ou à trous
 		{var lng_lat_tmp = [];
  	// on doit inverser les coordonnées de poly issue de turf
  		for (j=0 ; j < poly.geometry.coordinates[k][i].length ; j++)
  			{
+			console.log(poly.geometry.coordinates[k][i].length) ;
 			var lng_lat = [poly.geometry.coordinates[k][i][j][1], poly.geometry.coordinates[k][i][j][0]];
 			lng_lat_tmp.push(lng_lat);
 			}
