--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 			lng_lat_tmp.push(lng_lat);
 			}
 		composant_lng_lat_poly[i] = lng_lat_tmp;
-		console.log(composant_lng_lat_poly) ;
+		console.log(composant_lng_lat_poly[i]) ;
 		}
 	lng_lat_poly[k] = composant_lng_lat_poly ;
 	
