--- a/index.html
+++ b/index.html
@@ -749,12 +749,12 @@ console.log(poly.geometry.type) ;
 // on doit gérer le cas où la surface différence est un polygone à trou(s) !!
 // attention également au cas des multipolygones !!
 console.log(poly) ;
-var lng_lat_poly = [];
-var composant_lng_lat_poly = [];
+
 // on teste le cas de multipolygones et on compte dans ce cas le nombre de polygones
 var nb_poly ;
 if (poly.geometry.type == 'Polygon')
 { // cas d'un polygone unique, éventuellement à trous
+var lng_lat_poly = [];
 for (i=0 ; i < poly.geometry.coordinates.length ; i++)
 	{var lng_lat_tmp = [];
  	// on doit inverser les coordonnées de poly issue de turf
@@ -769,10 +769,13 @@ for (i=0 ; i < poly.geometry.coordinates.length ; i++)
 else
 { // cas d'un multipolygone : on doit aller opérer sur chacun des polygones, éventuellement à trous, chaque élément du tableau de coordonnées est un polygone
   // k est le nombre de polygones, i est le nombre de composants de chaque polygones, j est le nombre de coordonnées de chaque composant
+var lng_lat_poly = [];
 console.log(poly.geometry.coordinates.length) ;
 for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 	{ // boucle sur chaque polygone : ici, on a un array de dimension 1 si poly simple, de dimension >1 si poly à trous
-	var multiPoly = turf.multiPolygon(poly).add
+	var multiPoly = turf.multiPolygon(poly) ;
+	L.geoJson(multiPoly).addTo(map_3) ;
+	debugger ;
 	console.log(poly.geometry.coordinates[k].length) ;
 	for (i=0 ; i < poly.geometry.coordinates[k].length ; i++)
 	// on boucle sur la dimension du poly simple ou à trous
@@ -784,11 +787,6 @@ for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 			lng_lat_tmp.push(lng_lat);
 			}
 		composant_lng_lat_poly[i] = lng_lat_tmp;
-		for (z= 0 ; z < composant_lng_lat_poly.length ; z++)
-			{
-			console.log(z) ;
-			console.log(composant_lng_lat_poly[z]) ;
-			}
 		}
 	lng_lat_poly[k] = composant_lng_lat_poly ;
 	
