--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'bl
 // fin de la boucle sur chaque layer
 
 			  
-cercle_mange.addTo(layer_cercles_CS) ;
+// cercle_mange.addTo(layer_cercles_CS) ;
 // fin de la boucle sur chaque layer
 });
 	 
