--- a/index.html
+++ b/index.html
@@ -773,10 +773,7 @@ var lng_lat_poly = [];
 console.log(poly.geometry.coordinates.length) ;
 for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 	{ // boucle sur chaque polygone : ici, on a un array de dimension 1 si poly simple, de dimension >1 si poly à trous
-	var multiPoly = turf.multiPolygon(poly) ;
-	console.log(multiPoly) ;
-	L.geoJson(multiPoly).addTo(map_3) ;
-	debugger ;
+	var composant_lng_lat_poly = [] ;
 	console.log(poly.geometry.coordinates[k].length) ;
 	for (i=0 ; i < poly.geometry.coordinates[k].length ; i++)
 	// on boucle sur la dimension du poly simple ou à trous
@@ -791,7 +788,6 @@ for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 		}
 	lng_lat_poly[k] = composant_lng_lat_poly ;
 	
-
 	}
 }
 console.log(lng_lat_poly) ;
@@ -800,7 +796,7 @@ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'bl
 // fin de la boucle sur chaque layer
 
 			  
-// cercle_mange.addTo(layer_cercles_CS) ;
+cercle_mange.addTo(layer_cercles_CS) ;
 // fin de la boucle sur chaque layer
 });
 	 
