--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ cases.forEach(function(checkbox) {
 	// on remet les choix de filtre à zéro si on désélectionne un filtre
 	// on doit gérer les cas de figures car on a des contrôles différents
 	 switch(this.getAttribute("num_cb"))
-	  	{
+	  	{case '1':
 	        console.log(this.getAttribute("num_cb")) ;
 		
 		}
