--- a/index.html
+++ b/index.html
@@ -170,12 +170,16 @@ cases.forEach(function(checkbox) {
 	// on remet les choix de filtre à zéro si on désélectionne un filtre
 	// on doit gérer les cas de figures car on a des contrôles différents
 	 switch(this.getAttribute("num_cb"))
-	  	{case '1':
+	  	{
+		case '1':
 	        type_act.forEach(function(element,index)
 			{
 			document.getElementById("type_act_"+ (index+1)).checked = false ;
 			}) ;
-		
+		document.getElementById("choix_ou").checked = true ;
+		document.getElementById("choix_aumoins").checked = true ;
+		case '2':
+		case '3':
 		}
 		 
 	} ;
