--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ cases.forEach(function(checkbox) {
 		document.getElementById("choix_ou").checked = true ;
 		document.getElementById("choix_aumoins").checked = true ;
 		case '2':
+		console.log(slider) ;
 		case '3':
 		}
 		 
