--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ cases.forEach(function(checkbox) {
 		document.getElementById("choix_ou").checked = true ;
 		document.getElementById("choix_aumoins").checked = true ;
 		case '2':
-		document.getElementById("slider").reset() ;
+		document.getElementById("slider").noUiSlider.reset() ;
 		case '3':
 		}
 		 
