--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ cases.forEach(function(checkbox) {
 		case '2':
 		document.getElementById("slider").noUiSlider.reset() ;
 		case '3':
+		document.getElementById("bene_non").checked = true ;
 		}
 		 
 	} ;
