--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ cases.forEach(function(checkbox) {
 		document.getElementById("choix_ou").checked = true ;
 		document.getElementById("choix_aumoins").checked = true ;
 		case '2':
+		console.log('hello') ;
 		document.getElementById("slider").noUiSlider.reset() ;
 		case '3':
 		document.getElementById("bene_non").checked = true ;
