--- a/index.html
+++ b/index.html
@@ -179,11 +179,14 @@ cases.forEach(function(checkbox) {
 			}) ;
 		document.getElementById("choix_ou").checked = true ;
 		document.getElementById("choix_aumoins").checked = true ;
+		break ;
 		case '2':
 		console.log('hello') ;
 		document.getElementById("slider").noUiSlider.reset() ;
+		break ;
 		case '3':
 		document.getElementById("bene_non").checked = true ;
+		break ;
 	}
 		 
 
