--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     - on choisit de travailler au niveau famille et non au niveau individu <br>
     - on va étudier :  <br>
     &nbsp &nbsp &nbsp Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
-    &nbsp &nbsp &nbsp &nbsp aux quartiers de veille active et aux anciens quartiers de veille  <br>
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp aux quartiers de veille active et aux anciens quartiers de veille  <br>
     &nbsp &nbsp &nbsp Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise <br>
     &nbsp &nbsp &nbsp Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
@@ -130,8 +130,8 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres) : </label>
-<input type="number"  id ="rayon_cercles_influence" name="saisie" value='750' min='100' max='1500' step='50'>
+<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres, 750 mètres correspondent approximativement à 10 minutes) : </label>
+<input type="number"  id ="rayon_cercles_influence" name="saisie" value="750" min="100" max="1500" step="50">
 </div>
 </fieldset>	
 	
