--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres, 750 mètres correspondent approximativement à 10 minutes) : </label>
+<label for="rayon_cercles_influence">choix du rayon des cercles d'influence des centres sociaux (en mètres, 750 mètres correspondent approximativement à un
+	trajet de 10 minutes à pied) : </label>
 <input type="number"  id ="rayon_cercles_influence" name="saisie" value="750" min="100" max="1500" step="50">
 </div>
 </fieldset>	
