--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     - récupération des coordonnées des adresses via https://adresse.data.gouv.fr/csv <br>
     - on choisit de travailler au niveau famille et non au niveau individu <br>
     - on va étudier :  <br>
-    &nbsp &nbsp &nbsp Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville,  <br>
-    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp aux quartiers de veille active et aux anciens quartiers de veille  <br>
+    &nbsp &nbsp &nbsp Partie 1 : la localisation des adresses par rapport aux quartiers prioritaires de la ville (NQPV),  <br>
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp aux quartiers de veille active (QVA) et aux anciens quartiers de veille (AQV) <br>
     &nbsp &nbsp &nbsp Partie 2 : la répartition des adresses selon le temps de trajet à la 20ème Chaise <br>
     &nbsp &nbsp &nbsp Partie 3 : la répartition des adresses dans les IRIS et les zones d'influence des autres centres sociaux parisiens
 </p>
