--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-draw@0.4.13/docs/examples/libs/leaflet.geometryutil.js"></script>
+    <script src="//cdn.amcharts.com/lib/4/core.js"></script>
+    <script src="//cdn.amcharts.com/lib/4/charts.js"></script>
 
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
